[gd_scene load_steps=5 format=3 uid="uid://odfbonslu8t6"]

[ext_resource type="Script" path="res://script/item/tear_ball.gd" id="1_r6vp3"]
[ext_resource type="Texture2D" uid="uid://bi3bmmkwy8x1y" path="res://asset/image/asset.png" id="2_h4wtx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eapf5"]
atlas = ExtResource("2_h4wtx")
region = Rect2(700, 500, 100, 100)

[sub_resource type="CircleShape2D" id="CircleShape2D_ynrla"]
radius = 40.7922

[node name="TearBall" type="Node2D"]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_r6vp3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_eapf5")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ynrla")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
